// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Duplicate Dependency Detection > should detect exact duplicate dependencies 1`] = `
{
  "messages": [
    {
      "message": "[duplicate dependency] shared-lib has 2 installed versions:
  2.0.0 via root > package-a > shared-lib
  2.0.0 via root > package-b > shared-lib
Suggestions:    💡 Consider standardizing on version 2.0.0 (used by 2 dependencies)    💡 Check if newer versions of consuming packages (package-a, package-b) would resolve this duplicate",
      "score": 0,
      "severity": "warning",
    },
  ],
  "stats": {
    "dependencyCount": {
      "cjs": 4,
      "development": 0,
      "duplicate": 1,
      "esm": 0,
      "production": 2,
    },
    "installSize": 244,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`Duplicate Dependency Detection > should detect version conflicts 1`] = `
{
  "messages": [
    {
      "message": "[duplicate dependency] shared-lib has 3 installed versions:
  1.0.0 via root > package-a > shared-lib
  1.0.0 via root > package-b > shared-lib
  2.0.0 via shared-lib
Suggestions:    💡 Consider standardizing on version 1.0.0 (used by 2 dependencies)    💡 Check if newer versions of consuming packages (package-a, package-b) would resolve this duplicate",
      "score": 0,
      "severity": "warning",
    },
  ],
  "stats": {
    "dependencyCount": {
      "cjs": 4,
      "development": 0,
      "duplicate": 1,
      "esm": 0,
      "production": 2,
    },
    "installSize": 292,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`Duplicate Dependency Detection > should generate suggestions for duplicates 1`] = `
{
  "messages": [
    {
      "message": "[duplicate dependency] shared-lib has 2 installed versions:
  2.0.0 via root > package-a > shared-lib
  2.0.0 via root > package-b > shared-lib
Suggestions:    💡 Consider standardizing on version 2.0.0 (used by 2 dependencies)    💡 Check if newer versions of consuming packages (package-a, package-b) would resolve this duplicate",
      "score": 0,
      "severity": "warning",
    },
  ],
  "stats": {
    "dependencyCount": {
      "cjs": 4,
      "development": 0,
      "duplicate": 1,
      "esm": 0,
      "production": 2,
    },
    "installSize": 244,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`Duplicate Dependency Detection > should not detect duplicates when there are none 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "cjs": 1,
      "development": 0,
      "duplicate": 0,
      "esm": 0,
      "production": 1,
    },
    "installSize": 47,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;
